-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Replication
-
None
-
Fully Compatible
-
ALL
-
Repl 2019-12-16
-
0
-
None
-
None
-
None
-
None
-
None
-
None
-
None
We must make sure we do not hold the InitialSyncer mutex when we free the completion guard in the allDatabaseClonerFuture. Normally this is assured because we've scheduled another callback, which cannot fulfill the completion guard without first taking the lock (which assures that our release of the completion guard will not free it). On shutdown that isn't so.