SERVER-45061 Release lock before releasing completion guard when executors are shutting down.